deploy/lb/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sbdemo-nginx-np
spec:
  type: NodePort
  ports:
   - name: "http-port"
     protocol: "TCP"
     port: 80
     targetPort: 80
  selector:
    app: sbdemo-nginx
