deploy/lb/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sbdemo-ingress
spec:
  rules:
  - host: sbdemo.example.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sbdemo-nginx-np
          servicePort: 80
      - path: /v2/*
        backend:
          serviceName: web2
          servicePort: 8080
  backend:
    serviceName: sbdemo-nginx-np
    servicePort: 80
  tls:
  - hosts:
    - sbdemo.example.com
    secretName: tls-sbdemo
